# JobSearchAssistant

./: .env  README.md  pyproject.toml
data/: save_vacancy.json  test_vacancies.json
src/: abstr_classes.py  classes.py  data_storage.py  getting_data.py  main.py  utils.py
tests/: test_data_storage.py  test_save_delete.py
